@@ -1,19 +1,22 @@
 package ir.serajsamaneh.accounting.accountingmarkaz;
 
-import ir.serajsamaneh.accounting.saalmaali.SaalMaaliEntity;
-import ir.serajsamaneh.core.base.BaseHibernateDAO;
-
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import org.hibernate.Criteria;
 import org.hibernate.FlushMode;
+import org.springframework.beans.factory.config.ConfigurableBeanFactory;
+import org.springframework.context.annotation.Scope;
+import org.springframework.stereotype.Repository;
 import org.springframework.util.StringUtils;
 
-public class AccountingMarkazDAO extends BaseHibernateDAO<AccountingMarkazEntity,Long> {
+import ir.serajsamaneh.accounting.saalmaali.SaalMaaliEntity;
+import ir.serajsamaneh.core.base.BaseHibernateDAO;
 
-
+@Repository
+@Scope(value = ConfigurableBeanFactory.SCOPE_SINGLETON)
+public class AccountingMarkazDAO extends BaseHibernateDAO<AccountingMarkazEntity, Long> {
 
 	public Long getMaxAccountingMarkazCode(SaalMaaliEntity saalMaaliEntity) {
 		Map<String, Object> filter = new HashMap<String, Object>();
@@ -32,8 +35,8 @@ public class AccountingMarkazDAO extends BaseHibernateDAO<AccountingMarkazEntity
 		Long maxCode = 0l;
 		for (AccountingMarkazEntity kalaEntity : list) {
 			String codeStr = kalaEntity.getCode();
-			if(StringUtils.hasText(codeStr)){
-				Long codeLong = new Long(codeStr);
+			if (StringUtils.hasText(codeStr)) {
+				Long codeLong = Long.valueOf(codeStr);
 				maxCode = Math.max(maxCode.longValue(), codeLong.longValue());
 			}
 
@@ -41,10 +44,9 @@ public class AccountingMarkazDAO extends BaseHibernateDAO<AccountingMarkazEntity
 		return maxCode;
 
 	}
-	
+
 	private void addLocationFilter(Map<String, Object> filter) {
 
 	}
-
 
 }
