@@ -4,7 +4,13 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
+import javax.inject.Named;
+
+import org.springframework.context.annotation.Scope;
+import org.springframework.context.annotation.ScopedProxyMode;
+import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
+import org.springframework.web.context.WebApplicationContext;
 
 import ir.serajsamaneh.accounting.accountingmarkaztemplate.AccountingMarkazTemplateService;
 import ir.serajsamaneh.accounting.base.BaseAccountingForm;
@@ -20,29 +26,28 @@ import ir.serajsamaneh.core.util.JQueryUtil;
 import ir.serajsamaneh.core.util.SerajMessageUtil;
 import serajcomponent.DateConverter;
 import serajcomponent.SerajDateTimePickerType;
-
-public class AccountsTemplateForm extends
-		BaseAccountingForm<AccountsTemplateEntity, Long> {
+@Named("accountsTemplate")
+@Scope(value = WebApplicationContext.SCOPE_REQUEST, proxyMode = ScopedProxyMode.TARGET_CLASS)
+@Component
+public class AccountsTemplateForm extends BaseAccountingForm<AccountsTemplateEntity, Long> {
 
 	@Override
 	protected AccountsTemplateService getMyService() {
 		return accountsTemplateService;
 	}
-	
-	HesabTafsiliService  hesabTafsiliService;
+
+	HesabTafsiliService hesabTafsiliService;
 	AccountingMarkazTemplateService accountingMarkazTemplateService;
 	HesabMoeenService hesabMoeenService;
 //	MarkazHazineService markazHazineService;
 	HesabTafsiliTemplateService hesabTafsiliTemplateService;
 	HesabMoeenTemplateService hesabMoeenTemplateService;
 
-
 	public AccountingMarkazTemplateService getAccountingMarkazTemplateService() {
 		return accountingMarkazTemplateService;
 	}
 
-	public void setAccountingMarkazTemplateService(
-			AccountingMarkazTemplateService accountingMarkazTemplateService) {
+	public void setAccountingMarkazTemplateService(AccountingMarkazTemplateService accountingMarkazTemplateService) {
 		this.accountingMarkazTemplateService = accountingMarkazTemplateService;
 	}
 
@@ -50,8 +55,7 @@ public class AccountsTemplateForm extends
 		return hesabTafsiliTemplateService;
 	}
 
-	public void setHesabTafsiliTemplateService(
-			HesabTafsiliTemplateService hesabTafsiliTemplateService) {
+	public void setHesabTafsiliTemplateService(HesabTafsiliTemplateService hesabTafsiliTemplateService) {
 		this.hesabTafsiliTemplateService = hesabTafsiliTemplateService;
 	}
 
@@ -59,18 +63,16 @@ public class AccountsTemplateForm extends
 		return hesabMoeenTemplateService;
 	}
 
-	public void setHesabMoeenTemplateService(
-			HesabMoeenTemplateService hesabMoeenTemplateService) {
+	public void setHesabMoeenTemplateService(HesabMoeenTemplateService hesabMoeenTemplateService) {
 		this.hesabMoeenTemplateService = hesabMoeenTemplateService;
 	}
-/*
-	public MarkazHazineService getMarkazHazineService() {
-		return markazHazineService;
-	}
-
-	public void setMarkazHazineService(MarkazHazineService markazHazineService) {
-		this.markazHazineService = markazHazineService;
-	}*/
+	/*
+	 * public MarkazHazineService getMarkazHazineService() { return
+	 * markazHazineService; }
+	 * 
+	 * public void setMarkazHazineService(MarkazHazineService markazHazineService) {
+	 * this.markazHazineService = markazHazineService; }
+	 */
 
 	public HesabMoeenService getHesabMoeenService() {
 		return hesabMoeenService;
@@ -80,7 +82,6 @@ public class AccountsTemplateForm extends
 		this.hesabMoeenService = hesabMoeenService;
 	}
 
-
 	public HesabTafsiliService getHesabTafsiliService() {
 		return hesabTafsiliService;
 	}
@@ -89,31 +90,31 @@ public class AccountsTemplateForm extends
 		this.hesabTafsiliService = hesabTafsiliService;
 	}
 
-
 	public String localSave() {
 		getEntity().setOrganId(getCurrentOrganVO().getId());
 		getEntity().setOrganName(getCurrentOrganVO().getName());
-		List<SanadHesabdariItemTemplateEntity> sanadHesabdariItemList = getSanadHesabdariItemList(getSanadItemsXML(), true);
+		List<SanadHesabdariItemTemplateEntity> sanadHesabdariItemList = getSanadHesabdariItemList(getSanadItemsXML(),
+				true);
 		getMyService().updateTemplate(getEntity(), sanadHesabdariItemList);
-		
+
 		if (getEntity().getID() != null)
 			setIsNew(false);
-			//getMyService().save(getEntity());
+		// getMyService().save(getEntity());
 
-			if (getIsNew()) {
-				doExtraSaveAction();
-			} else {
-				doExtraEditAction();
-			}
+		if (getIsNew()) {
+			doExtraSaveAction();
+		} else {
+			doExtraEditAction();
+		}
 		return getLocalViewUrl();
 	}
-	
-	public void doExtraSaveAction(){
+
+	public void doExtraSaveAction() {
 		String message = SerajMessageUtil.getMessage(getEntityName() + "_title");
 		addInfoMessage("SUCCESSFUL_SAVE", message);
 	}
 
-	public void doExtraEditAction(){
+	public void doExtraEditAction() {
 		String message = SerajMessageUtil.getMessage(getEntityName() + "_title");
 		addInfoMessage("SUCCESSFUL_EDIT", message);
 	}
@@ -122,8 +123,8 @@ public class AccountsTemplateForm extends
 	 * public List<SelectItem> getSanadType(){ Map<String, Object> filter=new
 	 * HashMap<String, Object>();
 	 * filter.put("organId@eq",getCurrentOrgan().getId());
-	 * List<AccountsTemplateEntity> list
-	 * =getSanadTypeService().getDataList(null, filter);
+	 * List<AccountsTemplateEntity> list =sanadTypeService.getDataList(null,
+	 * filter);
 	 * 
 	 * List<SelectItem> selectItemList = new ArrayList<SelectItem>();
 	 * selectItemList.add(new SelectItem("", "------------"));
@@ -138,16 +139,14 @@ public class AccountsTemplateForm extends
 		return accountsTemplateService;
 	}
 
-	public void setAccountsTemplateService(
-			AccountsTemplateService accountsTemplateService) {
+	public void setAccountsTemplateService(AccountsTemplateService accountsTemplateService) {
 		this.accountsTemplateService = accountsTemplateService;
 	}
 
 	Integer incorrectInputExceptionRow;
 	protected String incorectItem;
-	
-	protected SanadHesabdariItemTemplateEntity populateSanadKala(
-			Map<String, String> map,
+
+	protected SanadHesabdariItemTemplateEntity populateSanadKala(Map<String, String> map,
 			SanadHesabdariItemTemplateEntity sanadHesabdariItemEntity, Boolean isInMultipleLevelMode) {
 
 		incorectItem = "entityId";
@@ -157,108 +156,98 @@ public class AccountsTemplateForm extends
 		incorectItem = "templateType";
 		if (StringUtils.hasText(map.get("templateType")))
 			sanadHesabdariItemEntity.setTemplateType(map.get("templateType"));
-		
+
 		incorectItem = "SanadHesabdariItem_hesabTafsili";
-		if(isInMultipleLevelMode && StringUtils.hasText(map.get("hesabTafsiliTemplateOneID")))
-			sanadHesabdariItemEntity.setHesabTafsiliTemplate(getHesabTafsiliTemplateService().load(new Long(map.get("hesabTafsiliTemplateOneID"))));
-		else if(!isInMultipleLevelMode)
-			sanadHesabdariItemEntity.setHesabTafsiliTemplate(getHesabTafsiliTemplateService().load(new Long(map.get("hesabTafsiliTemplateOneID"))));
+		if (isInMultipleLevelMode && StringUtils.hasText(map.get("hesabTafsiliTemplateOneID")))
+			sanadHesabdariItemEntity.setHesabTafsiliTemplate(
+					hesabTafsiliTemplateService.load(Long.valueOf(map.get("hesabTafsiliTemplateOneID"))));
+		else if (!isInMultipleLevelMode)
+			sanadHesabdariItemEntity.setHesabTafsiliTemplate(
+					hesabTafsiliTemplateService.load(Long.valueOf(map.get("hesabTafsiliTemplateOneID"))));
 
 		incorectItem = "SanadHesabdariItem_accountingMarkaz";
-		if(isInMultipleLevelMode && StringUtils.hasText(map.get("accountingMarkazTemplateID")))
-			sanadHesabdariItemEntity.setAccountingMarkazTemplate(getAccountingMarkazTemplateService().load(new Long(map.get("accountingMarkazTemplateID"))));
-		else if(!isInMultipleLevelMode)
-			sanadHesabdariItemEntity.setAccountingMarkazTemplate(getAccountingMarkazTemplateService().load(new Long(map.get("accountingMarkazTemplateID"))));
-
+		if (isInMultipleLevelMode && StringUtils.hasText(map.get("accountingMarkazTemplateID")))
+			sanadHesabdariItemEntity.setAccountingMarkazTemplate(
+					accountingMarkazTemplateService.load(Long.valueOf(map.get("accountingMarkazTemplateID"))));
+		else if (!isInMultipleLevelMode)
+			sanadHesabdariItemEntity.setAccountingMarkazTemplate(
+					accountingMarkazTemplateService.load(Long.valueOf(map.get("accountingMarkazTemplateID"))));
 
 		incorectItem = "SanadHesabdariItem_hesabMoeen";
-		HesabMoeenTemplateEntity hesabMoeenTemplateEntity = getHesabMoeenTemplateService().load(new Long(map.get("hesabMoeenTemplateID")));
+		HesabMoeenTemplateEntity hesabMoeenTemplateEntity = hesabMoeenTemplateService
+				.load(Long.valueOf(map.get("hesabMoeenTemplateID")));
 		sanadHesabdariItemEntity.setHesabMoeenTemplate(hesabMoeenTemplateEntity);
 		sanadHesabdariItemEntity.setHesabKolTemplate(hesabMoeenTemplateEntity.getHesabKolTemplate());
-		
+
 //		if (StringUtils.hasText(map.get("markazHazineID"))){
-//			MarkazHazineEntity markazHazineEntity = getMarkazHazineService().load(new Long(map.get("markazHazineID")));
+//			MarkazHazineEntity markazHazineEntity = getMarkazHazineService().load(Long.valueOf(map.get("markazHazineID")));
 //			sanadHesabdariItemEntity.setMarkazHazine(markazHazineEntity);
 //		}
 
-		
-/*		if (StringUtils.hasText(map.get("hesabTafsiliLevels"))){
-			String hesabTafsiliLevels = map.get("hesabTafsiliLevels");
-			String[] splited = hesabTafsiliLevels.split(",");
-			for (String hesabTafsiliLevel : splited) {
-				if(hesabTafsiliLevel.isEmpty())
-					continue;
-				String[] keyValue = hesabTafsiliLevel.split("=");
-				if(keyValue.length == 1)
-					continue;
-				String key = keyValue[0];
-				String value = keyValue[1];
-				
-				Integer level = Integer.valueOf(key.substring("hesabTafsili".length()));
-				ArticleTafsiliEntity articleTafsiliEntity = new ArticleTafsiliEntity();
-				articleTafsiliEntity.setHesabTafsili(getHesabTafsiliService().load(new Long(value)));
-				articleTafsiliEntity.setLevel(level);
-				articleTafsiliEntity.setSanadHesabdariItem(sanadHesabdariItemEntity);
-				sanadHesabdariItemEntity.addToarticleTafsili(articleTafsiliEntity);
-				
-			}
-		}*/
-		
-		
-/*		if (StringUtils.hasText(map.get("accountingMarkazLevels"))){
-			String accountingMarkazLevels = map.get("accountingMarkazLevels");
-			String[] splited = accountingMarkazLevels.split(",");
-			for (String accountingMarkazLevel : splited) {
-				if(accountingMarkazLevel.isEmpty())
-					continue;
-				String[] keyValue = accountingMarkazLevel.split("=");
-				if(keyValue.length == 1)
-					continue;
-				String key = keyValue[0];
-				String value = keyValue[1];
-				
-				Integer level = Integer.valueOf(key.substring("accountingMarkaz".length()));
-				ArticleTafsiliEntity articleTafsiliEntity = new ArticleTafsiliEntity();
-				articleTafsiliEntity.setAccountingMarkaz(getAccountingMarkazService().load(new Long(value)));
-				articleTafsiliEntity.setLevel(level);
-				articleTafsiliEntity.setSanadHesabdariItem(sanadHesabdariItemEntity);
-				sanadHesabdariItemEntity.addToarticleTafsili(articleTafsiliEntity);
-				
-			}
-		}*/
-		
-		
+		/*
+		 * if (StringUtils.hasText(map.get("hesabTafsiliLevels"))){ String
+		 * hesabTafsiliLevels = map.get("hesabTafsiliLevels"); String[] splited =
+		 * hesabTafsiliLevels.split(","); for (String hesabTafsiliLevel : splited) {
+		 * if(hesabTafsiliLevel.isEmpty()) continue; String[] keyValue =
+		 * hesabTafsiliLevel.split("="); if(keyValue.length == 1) continue; String key =
+		 * keyValue[0]; String value = keyValue[1];
+		 * 
+		 * Integer level = Integer.valueOf(key.substring("hesabTafsili".length()));
+		 * ArticleTafsiliEntity articleTafsiliEntity = new ArticleTafsiliEntity();
+		 * articleTafsiliEntity.setHesabTafsili(hesabTafsiliService.load(Long.valueOf(
+		 * value))); articleTafsiliEntity.setLevel(level);
+		 * articleTafsiliEntity.setSanadHesabdariItem(sanadHesabdariItemEntity);
+		 * sanadHesabdariItemEntity.addToarticleTafsili(articleTafsiliEntity);
+		 * 
+		 * } }
+		 */
+
+		/*
+		 * if (StringUtils.hasText(map.get("accountingMarkazLevels"))){ String
+		 * accountingMarkazLevels = map.get("accountingMarkazLevels"); String[] splited
+		 * = accountingMarkazLevels.split(","); for (String accountingMarkazLevel :
+		 * splited) { if(accountingMarkazLevel.isEmpty()) continue; String[] keyValue =
+		 * accountingMarkazLevel.split("="); if(keyValue.length == 1) continue; String
+		 * key = keyValue[0]; String value = keyValue[1];
+		 * 
+		 * Integer level = Integer.valueOf(key.substring("accountingMarkaz".length()));
+		 * ArticleTafsiliEntity articleTafsiliEntity = new ArticleTafsiliEntity();
+		 * articleTafsiliEntity.setAccountingMarkaz(accountingMarkazService.load(Long.
+		 * valueOf(value))); articleTafsiliEntity.setLevel(level);
+		 * articleTafsiliEntity.setSanadHesabdariItem(sanadHesabdariItemEntity);
+		 * sanadHesabdariItemEntity.addToarticleTafsili(articleTafsiliEntity);
+		 * 
+		 * } }
+		 */
 
 		incorectItem = "SanadHesabdariItem_bestankar";
 		if (StringUtils.hasText(map.get("bestankar")))
-			sanadHesabdariItemEntity.setBestankar(new Double(map
-					.get("bestankar").replaceAll(",","")));
-		else sanadHesabdariItemEntity.setBestankar(0d);
+			sanadHesabdariItemEntity.setBestankar(new Double(map.get("bestankar").replaceAll(",", "")));
+		else
+			sanadHesabdariItemEntity.setBestankar(0d);
 
 		incorectItem = "SanadHesabdariItem_bedehkar";
 		if (StringUtils.hasText(map.get("bedehkar")))
-			sanadHesabdariItemEntity
-					.setBedehkar(new Double(map.get("bedehkar").replaceAll(",","")));
-		else sanadHesabdariItemEntity.setBedehkar(0d);
+			sanadHesabdariItemEntity.setBedehkar(new Double(map.get("bedehkar").replaceAll(",", "")));
+		else
+			sanadHesabdariItemEntity.setBedehkar(0d);
 
 		incorectItem = "SanadHesabdariItem_tarikhArticle";
-		sanadHesabdariItemEntity.setTarikhArticle(DateConverter
-				.convertStringDateToGDate(SerajDateTimePickerType.Date,
-						map.get("tarikhArticle"), "Shamsi"));
+		sanadHesabdariItemEntity.setTarikhArticle(DateConverter.convertStringDateToGDate(SerajDateTimePickerType.Date,
+				map.get("tarikhArticle"), "Shamsi"));
 
 		incorectItem = "common_sharh";
 		String description = map.get("description");
-		description =description.replaceAll("\\p{Cntrl}", "");
+		description = description.replaceAll("\\p{Cntrl}", "");
 		sanadHesabdariItemEntity.setDescription(description);
 
 		return sanadHesabdariItemEntity;
 
 	}
-	
-	protected List<SanadHesabdariItemTemplateEntity> getSanadHesabdariItemList(
-			String sanadItemInput, Boolean isInMultipleLevelMode) {
-		List<Map<String, String>> list = JQueryUtil
-				.convertJQueryXMLToList(sanadItemInput);
+
+	protected List<SanadHesabdariItemTemplateEntity> getSanadHesabdariItemList(String sanadItemInput,
+			Boolean isInMultipleLevelMode) {
+		List<Map<String, String>> list = JQueryUtil.convertJQueryXMLToList(sanadItemInput);
 		if (list == null)
 			return null;
 
@@ -268,20 +257,18 @@ public class AccountsTemplateForm extends
 			for (Map<String, String> map : list) {
 				++incorrectInputExceptionRow;
 				SanadHesabdariItemTemplateEntity sanadHesabdariItemEntity = new SanadHesabdariItemTemplateEntity();
-				sanadHesabdariItemEntity = populateSanadKala(map,
-						sanadHesabdariItemEntity, isInMultipleLevelMode);
+				sanadHesabdariItemEntity = populateSanadKala(map, sanadHesabdariItemEntity, isInMultipleLevelMode);
 				// sanadKalaEntity.setSanad(sanadEntity);
 				// sanadEntity.addToSanadKala(sanadKalaEntity);
 				sanadHesabdariItemEntities.add(sanadHesabdariItemEntity);
 			}
 		} catch (NumberFormatException e) {
-			throw new InCorrectInputException("Common_incorrectInput",
-					SerajMessageUtil.getMessage(incorectItem),
+			throw new InCorrectInputException("Common_incorrectInput", SerajMessageUtil.getMessage(incorectItem),
 					incorrectInputExceptionRow);
 		}
 		return sanadHesabdariItemEntities;
 	}
-	
+
 	String sanadItemsXML;
 
 	public void setSanadItemsXML(String sanadItemsXML) {
@@ -297,18 +284,21 @@ public class AccountsTemplateForm extends
 			sanadItemsXML += "<total>1</total>\n";
 			sanadItemsXML += "<records>2</records>\n";
 
+			SanadHesabdariItemTemplateEntity sanadHesabdariItemTemplateBedehkar = getEntity()
+					.getSanadHesabdariItemTemplateBedehkar();
+			SanadHesabdariItemTemplateEntity sanadHesabdariItemTemplateBestankar = getEntity()
+					.getSanadHesabdariItemTemplateBestankar();
 
-			SanadHesabdariItemTemplateEntity sanadHesabdariItemTemplateBedehkar = getEntity().getSanadHesabdariItemTemplateBedehkar();
-			SanadHesabdariItemTemplateEntity sanadHesabdariItemTemplateBestankar = getEntity().getSanadHesabdariItemTemplateBestankar();
-			
-			if(sanadHesabdariItemTemplateBedehkar.getId() !=null || getEntity().getId() == null){
-				SanadHesabdariItemTemplateVO bedehkarVO = new SanadHesabdariItemTemplateVO(sanadHesabdariItemTemplateBedehkar,"Bedehkar");
-				addItemToSanadItemXML(bedehkarVO,"1");
+			if (sanadHesabdariItemTemplateBedehkar.getId() != null || getEntity().getId() == null) {
+				SanadHesabdariItemTemplateVO bedehkarVO = new SanadHesabdariItemTemplateVO(
+						sanadHesabdariItemTemplateBedehkar, "Bedehkar");
+				addItemToSanadItemXML(bedehkarVO, "1");
 			}
-			
-			if(sanadHesabdariItemTemplateBestankar.getId() !=null || getEntity().getId() == null){
-				SanadHesabdariItemTemplateVO bestankarVO = new SanadHesabdariItemTemplateVO(sanadHesabdariItemTemplateBestankar,"Bestankar");
-				addItemToSanadItemXML(bestankarVO,"2");
+
+			if (sanadHesabdariItemTemplateBestankar.getId() != null || getEntity().getId() == null) {
+				SanadHesabdariItemTemplateVO bestankarVO = new SanadHesabdariItemTemplateVO(
+						sanadHesabdariItemTemplateBestankar, "Bestankar");
+				addItemToSanadItemXML(bestankarVO, "2");
 			}
 
 			sanadItemsXML += "</rows>\n";
@@ -316,25 +306,18 @@ public class AccountsTemplateForm extends
 		return sanadItemsXML;
 	}
 
-	private void addItemToSanadItemXML(
-			SanadHesabdariItemTemplateVO sanadHesabdariItemVO, String index) {
+	private void addItemToSanadItemXML(SanadHesabdariItemTemplateVO sanadHesabdariItemVO, String index) {
 		sanadItemsXML += "<row id='" + index + "'>";
 
 		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getId() + "</cell>";
 		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getTemplateType() + "</cell>";
-		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getHesabKolTemplateID()
-				+ "</cell>";
-		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getHesabKolTemplateName()
-				+ "</cell>";
-		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getHesabMoeenTemplateID()
-				+ "</cell>";
-		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getHesabMoeenTemplateName()
-				+ "</cell>";
+		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getHesabKolTemplateID() + "</cell>";
+		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getHesabKolTemplateName() + "</cell>";
+		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getHesabMoeenTemplateID() + "</cell>";
+		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getHesabMoeenTemplateName() + "</cell>";
 
-		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getHesabTafsiliTemplateOneID()
-				+ "</cell>";
-		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getHesabTafsiliTemplateOneName()
-				+ "</cell>";
+		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getHesabTafsiliTemplateOneID() + "</cell>";
+		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getHesabTafsiliTemplateOneName() + "</cell>";
 //		sanadItemsXML += "<cell>"
 //				+ sanadHesabdariItemVO.getHesabTafsiliTemplateLevelNames() + "</cell>";
 //		sanadItemsXML += "<cell>"
@@ -342,42 +325,34 @@ public class AccountsTemplateForm extends
 //		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getHesabTafsiliTemplateDescs()
 //				+ "</cell>";
 
-		sanadItemsXML += "<cell>"
-				+ sanadHesabdariItemVO.getAccountingMarkazTemplateID() + "</cell>";
-		sanadItemsXML += "<cell>"
-				+ sanadHesabdariItemVO.getAccountingMarkazTemplateName() + "</cell>";
+		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getAccountingMarkazTemplateID() + "</cell>";
+		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getAccountingMarkazTemplateName() + "</cell>";
 //		sanadItemsXML += "<cell>"	+ sanadHesabdariItemVO.getAccountingMarkazLevelNames()	+ "</cell>";
 //		sanadItemsXML += "<cell>"	+ sanadHesabdariItemVO.getAccountingMarkazLevels() + "</cell>";
 //		sanadItemsXML += "<cell>"	+ sanadHesabdariItemVO.getAccountingMarkazDescs() + "</cell>";
 
-		sanadItemsXML += "<cell>"	+ sanadHesabdariItemVO.getApplyAutomaticTafsili() + "</cell>";
-		sanadItemsXML += "<cell>"	+ sanadHesabdariItemVO.getApplyAutomaticTafsiliName() + "</cell>";
-		
+		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getApplyAutomaticTafsili() + "</cell>";
+		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getApplyAutomaticTafsiliName() + "</cell>";
 
-		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getDescription()	+ "</cell>";
+		sanadItemsXML += "<cell>" + sanadHesabdariItemVO.getDescription() + "</cell>";
 
-		String deleteFunction = "deleteRowData(getSanadHesabdariGridId(),"
-				+ index + ");";
-		String del = "<input style=\'\' type=\'image\' src=\'"
-				+ getServletContext().getContextPath()
-				+ "/images/remove.png\'  value=\'Delete\' onclick=\'return "
-				+ deleteFunction + "\' />";
+		String deleteFunction = "deleteRowData(getSanadHesabdariGridId()," + index + ");";
+		String del = "<input style=\'\' type=\'image\' src=\'" + getServletContext().getContextPath()
+				+ "/images/remove.png\'  value=\'Delete\' onclick=\'return " + deleteFunction + "\' />";
 		sanadItemsXML += "<cell><![CDATA[ " + del + "]]></cell>";
 
-		String editFunction = "editSanadHesabdariRowData(getSanadHesabdariGridId(),"
-				+ index + ",getEditDialogTitle());";
-		String edit = "<input style=\'\' type=\'image\' src=\'"
-				+ getServletContext().getContextPath()
-				+ "/images/edit.png\'  value=\'Edit\' onclick=\'return "
-				+ editFunction + "\' />";
+		String editFunction = "editSanadHesabdariRowData(getSanadHesabdariGridId()," + index
+				+ ",getEditDialogTitle());";
+		String edit = "<input style=\'\' type=\'image\' src=\'" + getServletContext().getContextPath()
+				+ "/images/edit.png\'  value=\'Edit\' onclick=\'return " + editFunction + "\' />";
 		sanadItemsXML += "<cell><![CDATA[ " + edit + "]]></cell>";
 		sanadItemsXML += "</row>";
 	}
-	
+
 	public void createAutomaticSanadTemplates() {
 		getLogger().info("initializing accounts tempaltes");
 		getMyService().createAutomaticSanadTemplates(getCurrentOrganVO().getId());
-		((SerajDataModel)getLocalDataModel()).clearPage();
+		((SerajDataModel) getLocalDataModel()).clearPage();
 		addInfoMessage("SUCCESSFUL_ACTION");
 	}
 
