@@ -6,6 +6,10 @@ import java.util.List;
 import java.util.Map;
 
 import org.apache.commons.collections4.map.ListOrderedMap;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.config.ConfigurableBeanFactory;
+import org.springframework.context.annotation.Scope;
+import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.w3c.dom.Element;
 
@@ -25,108 +29,45 @@ import ir.serajsamaneh.accounting.hesabtafsilitemplate.HesabTafsiliTemplateEntit
 import ir.serajsamaneh.accounting.hesabtafsilitemplate.HesabTafsiliTemplateService;
 import ir.serajsamaneh.accounting.saalmaali.SaalMaaliService;
 import ir.serajsamaneh.core.base.BaseEntityService;
-
-public class HesabKolTemplateService extends
-		BaseEntityService<HesabKolTemplateEntity, Long> {
+@Service
+@Scope(value = ConfigurableBeanFactory.SCOPE_SINGLETON)
+public class HesabKolTemplateService extends BaseEntityService<HesabKolTemplateEntity, Long> {
 
 	@Override
 	protected HesabKolTemplateDAO getMyDAO() {
 		return hesabKolTemplateDAO;
 	}
 
+	@Autowired
 	HesabKolTemplateDAO hesabKolTemplateDAO;
+	@Autowired
 	HesabMoeenTemplateService hesabMoeenTemplateService;
+	@Autowired
 	HesabTafsiliTemplateService hesabTafsiliTemplateService;
+	@Autowired
 	HesabGroupService hesabGroupService;
+	@Autowired
 	SaalMaaliService saalMaaliService;
-
+	@Autowired
 	HesabGroupTemplateDAO hesabGroupTemplateDAO;
+	@Autowired
 	HesabTafsiliTemplateDAO hesabTafsiliTemplateDAO;
+	@Autowired
 	HesabMoeenTemplateDAO hesabMoeenTemplateDAO;
-	public HesabMoeenTemplateDAO getHesabMoeenTemplateDAO() {
-		return hesabMoeenTemplateDAO;
-	}
-
-	public void setHesabMoeenTemplateDAO(HesabMoeenTemplateDAO hesabMoeenTemplateDAO) {
-		this.hesabMoeenTemplateDAO = hesabMoeenTemplateDAO;
-	}
-
-
-	public HesabTafsiliTemplateDAO getHesabTafsiliTemplateDAO() {
-		return hesabTafsiliTemplateDAO;
-	}
-
-	public void setHesabTafsiliTemplateDAO(
-			HesabTafsiliTemplateDAO hesabTafsiliTemplateDAO) {
-		this.hesabTafsiliTemplateDAO = hesabTafsiliTemplateDAO;
-	}
-
-
-	public HesabGroupTemplateDAO getHesabGroupTemplateDAO() {
-		return hesabGroupTemplateDAO;
-	}
-
-	public void setHesabGroupTemplateDAO(HesabGroupTemplateDAO hesabGroupTemplateDAO) {
-		this.hesabGroupTemplateDAO = hesabGroupTemplateDAO;
-	}
-
-
-
-	public HesabMoeenTemplateService getHesabMoeenTemplateService() {
-		return hesabMoeenTemplateService;
-	}
-
-	public void setHesabMoeenTemplateService(
-			HesabMoeenTemplateService hesabMoeenTemplateService) {
-		this.hesabMoeenTemplateService = hesabMoeenTemplateService;
-	}
-
-	public HesabTafsiliTemplateService getHesabTafsiliTemplateService() {
-		return hesabTafsiliTemplateService;
-	}
-
-	public void setHesabTafsiliTemplateService(
-			HesabTafsiliTemplateService hesabTafsiliTemplateService) {
-		this.hesabTafsiliTemplateService = hesabTafsiliTemplateService;
-	}
-
-	public HesabGroupService getHesabGroupService() {
-		return hesabGroupService;
-	}
-
-	public void setHesabGroupService(HesabGroupService hesabGroupService) {
-		this.hesabGroupService = hesabGroupService;
-	}
-
-	public SaalMaaliService getSaalMaaliService() {
-		return saalMaaliService;
-	}
-
-	public void setSaalMaaliService(SaalMaaliService saalMaaliService) {
-		this.saalMaaliService = saalMaaliService;
-	}
-
-	public void setHesabKolTemplateDAO(HesabKolTemplateDAO hesabKolTemplateDAO) {
-		this.hesabKolTemplateDAO = hesabKolTemplateDAO;
-	}
-
-	public HesabKolTemplateDAO getHesabKolTemplateDAO() {
-		return hesabKolTemplateDAO;
-	}
 
 	@Transactional(readOnly = false)
 	public void init() {
 //		getLogger().info("initializing accounts");
 //		createDefaultAccounts();
 	}
-	
+
 	@Transactional(readOnly = false)
 	public void createHesabGroup(Element hesbaGroupElem, Long organId, String organName) {
 		String typeEnum = hesbaGroupElem.getAttribute("type");
-		Long code = new Long(hesbaGroupElem.getAttribute("code"));
+		Long code = Long.valueOf(hesbaGroupElem.getAttribute("code"));
 		String mahyatEnum = hesbaGroupElem.getAttribute("mahyat");
 		String hesabGroupName = hesbaGroupElem.getAttribute("name");
-		HesabGroupTemplateEntity hesabGroupTemplateEntity = getHesabGroupTemplateDAO().getHesabGroupByCode(code, organId);
+		HesabGroupTemplateEntity hesabGroupTemplateEntity = hesabGroupTemplateDAO.getHesabGroupByCode(code, organId);
 		if (hesabGroupTemplateEntity == null)
 			hesabGroupTemplateEntity = new HesabGroupTemplateEntity();
 		hesabGroupTemplateEntity.setName(hesabGroupName);
@@ -135,17 +76,17 @@ public class HesabKolTemplateService extends
 		hesabGroupTemplateEntity.setCode(code);
 		hesabGroupTemplateEntity.setOrganId(organId);
 		hesabGroupTemplateEntity.setOrganName(organName);
-		getHesabGroupTemplateDAO().saveOrUpdate(hesabGroupTemplateEntity);
-		getLogger().info("hesabGroupTempate created : "+hesabGroupName);
+		hesabGroupTemplateDAO.saveOrUpdate(hesabGroupTemplateEntity);
+		getLogger().info("hesabGroupTempate created : " + hesabGroupName);
 	}
 
 	@Transactional(readOnly = false)
 	public void createHesabKolTemplate(Element hesbaKolElem, Long organId, String organName) {
 		String hesabKolCode = hesbaKolElem.getAttribute("code");
 		String hesabKolName = hesbaKolElem.getAttribute("name");
-		Long hesabGroupCode = new Long(hesbaKolElem.getAttribute("HesabGroup"));
+		Long hesabGroupCode = Long.valueOf(hesbaKolElem.getAttribute("HesabGroup"));
 		String mahyatKol = hesbaKolElem.getAttribute("mahyat");
-		
+
 		createHesabKolTemplate(hesabKolCode, hesabKolName, hesabGroupCode, mahyatKol, organId, organName);
 	}
 
@@ -154,9 +95,10 @@ public class HesabKolTemplateService extends
 		String hesabMoeenCode = hesabTafsiliElem.getAttribute("hesabMoeen");
 		String hesabTafsiliCode = hesabTafsiliElem.getAttribute("code");
 		String hesabTafsiliName = hesabTafsiliElem.getAttribute("name");
-		getHesabTafsiliTemplateDAO().save(new Long(hesabTafsiliCode), hesabTafsiliName, hesabMoeenCode, organId, 1, organName);
-		getLogger().info("hesabTafsili created : "+hesabTafsiliCode);
-		
+		hesabTafsiliTemplateDAO.save(Long.valueOf(hesabTafsiliCode), hesabTafsiliName, hesabMoeenCode, organId, 1,
+				organName);
+		getLogger().info("hesabTafsili created : " + hesabTafsiliCode);
+
 	}
 
 	@Transactional(readOnly = false)
@@ -164,8 +106,9 @@ public class HesabKolTemplateService extends
 		String hesabKolCode = hesabMoeenElem.getAttribute("hesabKol");
 		String hesabMoeenCode = hesabMoeenElem.getAttribute("code");
 		String hesabMoeenName = hesabMoeenElem.getAttribute("name");
-		
-		HesabMoeenTemplateEntity hesabMoeenTemplateEntity = getHesabMoeenTemplateDAO().getHesabMoeenTemplateByCode(hesabMoeenCode, organId);
+
+		HesabMoeenTemplateEntity hesabMoeenTemplateEntity = hesabMoeenTemplateDAO
+				.getHesabMoeenTemplateByCode(hesabMoeenCode, organId);
 		if (hesabMoeenTemplateEntity == null)
 			hesabMoeenTemplateEntity = new HesabMoeenTemplateEntity();
 		hesabMoeenTemplateEntity.setScope(HesabScopeEnum.GLOBAL);
@@ -173,15 +116,15 @@ public class HesabKolTemplateService extends
 		hesabMoeenTemplateEntity.setCode(hesabMoeenCode);
 		hesabMoeenTemplateEntity.setHidden(false);
 		hesabMoeenTemplateEntity.setHesabKolTemplate(getHesabKolTemplateByCode(hesabKolCode, organId));
-		if(hesabMoeenTemplateEntity.getHesabKolTemplate() == null)
+		if (hesabMoeenTemplateEntity.getHesabKolTemplate() == null)
 			System.out.println(hesabMoeenTemplateEntity.getHesabKolTemplate());
-		
+
 		hesabMoeenTemplateEntity.setOrganId(organId);
 		hesabMoeenTemplateEntity.setOrganName(organName);
-		
-		getHesabMoeenTemplateDAO().saveOrUpdate(hesabMoeenTemplateEntity);
-		getLogger().info("hesabMoeen created : "+hesabMoeenCode);
-		
+
+		hesabMoeenTemplateDAO.saveOrUpdate(hesabMoeenTemplateEntity);
+		getLogger().info("hesabMoeen created : " + hesabMoeenCode);
+
 	}
 
 //	@Transactional(readOnly = false)
@@ -191,13 +134,14 @@ public class HesabKolTemplateService extends
 //	}
 
 	@Transactional(readOnly = false)
-	public HesabKolTemplateEntity createHesabKolTemplate(String hesabKolCode, String hesabKolName,
-			Long hesabGroupCode, String mahyatKol, Long organId, String organName) {
-		HesabGroupTemplateEntity hesabGroupTemplateEntity = getHesabGroupTemplateDAO().getHesabGroupByCode(hesabGroupCode, organId);
+	public HesabKolTemplateEntity createHesabKolTemplate(String hesabKolCode, String hesabKolName, Long hesabGroupCode,
+			String mahyatKol, Long organId, String organName) {
+		HesabGroupTemplateEntity hesabGroupTemplateEntity = hesabGroupTemplateDAO.getHesabGroupByCode(hesabGroupCode,
+				organId);
 		HesabKolTemplateEntity hesabKolTemplateEntity = getHesabKolTemplateByCode(hesabKolCode, organId);
-		if (hesabKolTemplateEntity == null){
+		if (hesabKolTemplateEntity == null) {
 			hesabKolTemplateEntity = getHesabKolTemplateByName(hesabKolName, organId);
-			if(hesabKolTemplateEntity == null) {
+			if (hesabKolTemplateEntity == null) {
 				hesabKolTemplateEntity = new HesabKolTemplateEntity();
 				hesabKolTemplateEntity.setHidden(false);
 			}
@@ -209,26 +153,22 @@ public class HesabKolTemplateService extends
 		hesabKolTemplateEntity.setOrganId(organId);
 		hesabKolTemplateEntity.setOrganName(organName);
 		saveOrUpdate(hesabKolTemplateEntity);
-		getLogger().info("hesabKol created : "+hesabKolCode);
+		getLogger().info("hesabKol created : " + hesabKolCode);
 		return hesabKolTemplateEntity;
 	}
-	
-
-	
-
 
 	@Override
 	public void saveOrUpdateStateLess(HesabKolTemplateEntity entity) {
-		if(entity.getHidden() == null)
+		if (entity.getHidden() == null)
 			entity.setHidden(false);
 		super.saveOrUpdateStateLess(entity);
 	}
-	
+
 	@Transactional
 	public HesabKolTemplateEntity getHesabKolTemplateByCode(String hesabCode, Long organId) {
 		return getMyDAO().getHesabKolTemplateByCode(hesabCode, organId);
 	}
-	
+
 	@Transactional
 	public HesabKolTemplateEntity getHesabKolTemplateByName(String hesabKolName, Long organId) {
 		return getMyDAO().getHesabKolTemplateByName(hesabKolName, organId);
@@ -247,19 +187,20 @@ public class HesabKolTemplateService extends
 		localFilter.put("organId@eq", organId);
 		return load(null, localFilter);
 	}
-	
 
 	public List<HesabKolTemplateEntity> getCurrentHesabKolTemplateList(List<Long> topOrganList) {
 		HashMap<String, Object> localFilter = new HashMap<String, Object>();
-		//localFilter.put("organId@eq",organId);
+		// localFilter.put("organId@eq",organId);
 		localFilter.put("organId@in", topOrganList);
-		localFilter.put("hidden@eq",Boolean.FALSE);
-		List<HesabKolTemplateEntity> hesabKolList = getDataList(null, localFilter, HesabKolEntity.PROP_CODE, true,false);
+		localFilter.put("hidden@eq", Boolean.FALSE);
+		List<HesabKolTemplateEntity> hesabKolList = getDataList(null, localFilter, HesabKolEntity.PROP_CODE, true,
+				false);
 		return hesabKolList;
 	}
+
 	@Transactional
 	public void save(HesabKolTemplateEntity entity) {
-		Boolean isNew=(entity.getId()!=null?false:true);
+		Boolean isNew = (entity.getId() != null ? false : true);
 		super.save(entity);
 		logAction(isNew, entity);
 	}
@@ -270,7 +211,7 @@ public class HesabKolTemplateService extends
 		localFilter.put("organId@eq", organId);
 		return load(null, localFilter);
 	}
-	
+
 	public HesabKolTemplateEntity loadByNameInCurrentOrgan(String name, Long organId) {
 		Map<String, Object> localFilter = new HashMap<String, Object>();
 		localFilter.put("name@eq", name);
@@ -278,24 +219,24 @@ public class HesabKolTemplateService extends
 		return load(null, localFilter);
 	}
 
-	@Transactional(readOnly=true)
+	@Transactional(readOnly = true)
 	public List<ListOrderedMap<String, String>> getRootHesabs(Long organId, List<Long> topOrganList) {
 		List<ListOrderedMap<String, String>> rootHesabsList;
-		List<HesabMoeenTemplateEntity> rootHesabMoeens = getHesabMoeenTemplateService().getRootHesabs(organId, topOrganList);
-		
-		rootHesabsList = new ArrayList<ListOrderedMap<String, String>>(); 
-		
+		List<HesabMoeenTemplateEntity> rootHesabMoeens = hesabMoeenTemplateService.getRootHesabs(organId, topOrganList);
+
+		rootHesabsList = new ArrayList<ListOrderedMap<String, String>>();
+
 		for (HesabMoeenTemplateEntity hesabMoeenEntity : rootHesabMoeens) {
 			ListOrderedMap<String, String> hesabMoeenMap = new ListOrderedMap<String, String>();
-			hesabMoeenMap.put("value","Moeen_"+hesabMoeenEntity.getId());
-			hesabMoeenMap.put("label",hesabMoeenEntity.getDesc());
+			hesabMoeenMap.put("value", "Moeen_" + hesabMoeenEntity.getId());
+			hesabMoeenMap.put("label", hesabMoeenEntity.getDesc());
 			rootHesabsList.add(hesabMoeenMap);
 		}
-		List<HesabTafsiliTemplateEntity> rootHesabTafsilies = getHesabTafsiliTemplateService().getRootHesabs(topOrganList);
+		List<HesabTafsiliTemplateEntity> rootHesabTafsilies = hesabTafsiliTemplateService.getRootHesabs(topOrganList);
 		for (HesabTafsiliTemplateEntity hesabTafsiliEntity : rootHesabTafsilies) {
 			ListOrderedMap<String, String> hesabTafsiliMap = new ListOrderedMap<String, String>();
-			hesabTafsiliMap.put("value","Tafsili_"+hesabTafsiliEntity.getId());
-			hesabTafsiliMap.put("label",hesabTafsiliEntity.getDesc());
+			hesabTafsiliMap.put("value", "Tafsili_" + hesabTafsiliEntity.getId());
+			hesabTafsiliMap.put("label", hesabTafsiliEntity.getDesc());
 			rootHesabsList.add(hesabTafsiliMap);
 		}
 		return rootHesabsList;
